--- a/kuugatool-nacos-parse/pom.xml
+++ b/kuugatool-nacos-parse/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <artifactId>kuugatool-parent</artifactId>
-        <groupId>io.github.kuugasky.kuugatool</groupId>
+        <groupId>io.github.kuugasky</groupId>
         <version>1.0.0</version>
     </parent>
 
@@ -30,7 +30,7 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>io.github.kuugasky.kuugatool</groupId>
+            <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-extra</artifactId>
             <version>1.0.0</version>
             <scope>compile</scope>
