--- a/kuugatool-pdf/pom.xml
+++ b/kuugatool-pdf/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>io.github.kuugasky.kuugatool</groupId>
+        <groupId>io.github.kuugasky</groupId>
         <artifactId>kuugatool-parent</artifactId>
         <version>1.0.0</version>
     </parent>
@@ -19,7 +19,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.github.kuugasky.kuugatool</groupId>
+            <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-core</artifactId>
             <version>${kuugatool.version}</version>
             <scope>compile</scope>
