--- a/kuugatool-xml/pom.xml
+++ b/kuugatool-xml/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <artifactId>kuugatool-parent</artifactId>
-        <groupId>io.github.kuugasky.kuugatool</groupId>
+        <groupId>io.github.kuugasky</groupId>
         <version>1.0.0</version>
     </parent>
 
@@ -18,13 +18,13 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.github.kuugasky.kuugatool</groupId>
+            <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-core</artifactId>
             <version>${kuugatool.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>io.github.kuugasky.kuugatool</groupId>
+            <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-json</artifactId>
             <version>${kuugatool.version}</version>
             <scope>compile</scope>
