--- a/kuugatool-all/pom.xml
+++ b/kuugatool-all/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>kuugatool-all</artifactId>
-    <version>${kuugatool.version}</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
     <description>kuugatool-工具类库</description>
 
@@ -49,91 +49,91 @@
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-core</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>${parent.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-crypto</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>${parent.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-http</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>${parent.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-json</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>${parent.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-extra</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>${parent.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-captcha</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>${parent.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-qrcode</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>${parent.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-system</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>${parent.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-bean</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>${parent.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-aop</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>${parent.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-sql</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>${parent.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-thirdparty</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>${parent.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-operation-log</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>${parent.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-nacos-parse</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>${parent.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-cache</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>${parent.version}</version>
             <scope>compile</scope>
         </dependency>
 
