--- a/kuugatool-core/pom.xml
+++ b/kuugatool-core/pom.xml
@@ -12,7 +12,7 @@
     <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>kuugatool-core</artifactId>
-    <version>${kuugatool.version}</version>
+    <version>1.0.0</version>
     <name>${project.artifactId}</name>
     <description>kuugatool核心，包括集合、字符串、Bean等工具</description>
 
