--- a/kuugatool-nacos-parse/pom.xml
+++ b/kuugatool-nacos-parse/pom.xml
@@ -12,7 +12,7 @@
     <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>kuugatool-nacos-parse</artifactId>
-    <version>${kuugatool.version}</version>
+    <version>1.0.0</version>
     <name>${project.artifactId}</name>
     <description>kuugatool Nacos配置解析</description>
 
