--- a/kuugatool-pdf/pom.xml
+++ b/kuugatool-pdf/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-core</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
