--- a/kuugatool-spider/pom.xml
+++ b/kuugatool-spider/pom.xml
@@ -12,7 +12,7 @@
     <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>kuugatool-spider</artifactId>
-    <version>${kuugatool.version}</version>
+    <version>1.0.0</version>
     <name>${project.artifactId}</name>
     <description>kuugatool 爬虫工具</description>
 
@@ -20,19 +20,19 @@
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-core</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-json</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-http</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
