--- a/kuugatool-sql/pom.xml
+++ b/kuugatool-sql/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>kuugatool-sql</artifactId>
-    <version>${kuugatool.version}</version>
+    <version>1.0.0</version>
     <name>${project.artifactId}</name>
     <description>kuugatool SQL工具</description>
 
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-core</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
 
