--- a/kuugatool-thirdparty/pom.xml
+++ b/kuugatool-thirdparty/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>kuugatool-thirdparty</artifactId>
-    <version>${kuugatool.version}</version>
+    <version>1.0.0</version>
     <name>${project.artifactId}</name>
     <description>kuugatool thirdparty鉴权工具</description>
 
@@ -20,25 +20,25 @@
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-core</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-http</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-extra</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-aop</artifactId>
-            <version>${kuugatool.version}</version>
+            <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
 
