--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
         <compile.version>17</compile.version>
 
         <project.groupId>io.github.kuugasky.kuugatool</project.groupId>
-        <kuugatool.version>1.0.0</kuugatool.version>
 
         <druid.version>1.2.16</druid.version>
         <mysql-connector-java.version>8.0.29</mysql-connector-java.version>
@@ -86,6 +85,9 @@
         <module>kuugatool-cache</module>
         <module>kuugatool-mq</module>
         <module>kuugatool-algorithm</module>
+
+        <!-- all tools -->
+        <module>kuugatool-all</module>
     </modules>
 
     <developers>
