--- a/kuugatool-extra/pom.xml
+++ b/kuugatool-extra/pom.xml
@@ -141,6 +141,12 @@
             <artifactId>ganymed-ssh2</artifactId>
             <version>build210</version>
         </dependency>-->
+        <!-- mockito -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.23.4</version>
+        </dependency>
         <!-- mock -->
         <dependency>
             <groupId>org.springframework</groupId>
