--- a/kuugatool-nacos-parse/pom.xml
+++ b/kuugatool-nacos-parse/pom.xml
@@ -6,13 +6,13 @@
     <parent>
         <artifactId>kuugatool-parent</artifactId>
         <groupId>io.github.kuugasky</groupId>
-        <version>1.0.0</version>
+        <version>2.0.0</version>
     </parent>
 
     <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>kuugatool-nacos-parse</artifactId>
-    <version>1.0.0</version>
+    <version>2.0.0</version>
     <name>${project.artifactId}</name>
     <description>kuugatool Nacos配置解析</description>
 
@@ -32,13 +32,13 @@
         <dependency>
             <groupId>io.github.kuugasky</groupId>
             <artifactId>kuugatool-extra</artifactId>
-            <version>1.0.0</version>
+            <version>2.0.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>RELEASE</version>
+            <version>${lombok.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
