--- a/kuugatool-core/pom.xml
+++ b/kuugatool-core/pom.xml
@@ -16,6 +16,14 @@
     <name>${project.artifactId}</name>
     <description>kuugatool核心，包括集合、字符串、Bean等工具</description>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <java.version>21</java.version>
+        <compile.version>21</compile.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -86,6 +94,19 @@
                     <groupId>org.slf4j</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <!-- servlet -->
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>${servlet.api.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+            <version>${servlet.annotation.api.version}</version>
+            <scope>compile</scope>
         </dependency>
         <!-- color -->
         <dependency>
